fix styling bug on mobile

--- a/src/components/landingPage/mobile/landingpagemobile.css
+++ b/src/components/landingPage/mobile/landingpagemobile.css
@@ -3,7 +3,7 @@
 }
 
 #hero-mobile {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   color: white;
